Allow user to configure trains leaving staging to have the right number of engines, model and road name.

--- a/jmri/jmrit/operations/trains/JmritOperationsTrainsBundle.properties
+++ b/jmri/jmrit/operations/trains/JmritOperationsTrainsBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -57,6 +57,7 @@ RoadsTrain			= Select car roads serviced by this train
 
 Auto				= Auto 
 Caboose				= Caboose
+Engine				= Engine
 Engines				= Engines
 fred				= FRED
 None				= None
@@ -75,10 +76,29 @@ Building			= Building
 Built				= Built
 BuildFailed			= Build Failed
 Cars				= Cars
+cars				= cars
 Drop				= Drop
 TrainReset			= Train reset
 Partial				= Partial
 Terminated			= Terminated
 
 moves				= moves
+
+# manifest messages
+
+ManifestForTrain	= Manifest for train
+Valid				= Valid
+assignedToThisTrain	= assigned to this train
+PickupEngineAt 		= Pickup engine(s) at
+ScheduledWorkIn		= Scheduled work in
+TrainDeparts 		= Train departs 
+boundWith			= bound with
+feet				= feet
+DropEngineTo 		= Drop engine(s) to
+TrainTerminatesIn	= Train terminates in
+Pickup				= Pickup
+Hazardous			= Hazardous
+from				= from
+to					= to
+			
 
