initial ECoS support

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.27 $
+# Revision $Revision: 1.28 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -57,6 +57,9 @@ jmri.jmrix.can.cbus.swing.configtool.ConfigToolAction = Open CBUS Config Tool
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
 
 jmri.jmrix.easydcc.easydccmon.EasyDccMonAction =    Open EasyDCC Monitor
+
+jmri.jmrix.ecos.swing.monitor.MonAction =           Open ECoS Monitor
+jmri.jmrix.ecos.swing.statusframe.StatusFrameAction = Open ECoS Info
 
 jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
 jmri.jmrix.grapevine.nodetable.NodeTableAction =    Open Grapevine Node Table
