--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.25 $
+# Revision $Revision: 1.26 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -16,6 +16,7 @@ MenuItemAcela = Acela
 MenuItemCMRI = CMRI
 MenuItemDirect = DirectDrive
 MenuItemEasyDCC = EasyDCC
+MenuItemEcos = ECoS
 MenuItemLocoNet = LocoNet
 MenuItemMRC = Model Rectifier Corp (MRC)
 MenuItemNCE = NCE
