Fix "set" engine destination and train.  Start work on car weight in tons.

--- a/jmri/jmrit/operations/cars/JmritOperationsCarsBundle.properties
+++ b/jmri/jmrit/operations/cars/JmritOperationsCarsBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -16,6 +16,7 @@ Color				= Color
 Length				= Length
 Len					= Len
 Weight				= Weight
+WeightTons			= Weight Tons
 Owner				= Owner
 Location			= Location
 Destination			= Destination
@@ -50,6 +51,10 @@ carRoadNum			= Car road number must be less than 10 characters
 carAttribute		= Car attribute must be less than 13 characters
 carAttribute5		= Car attribute must be less than 5 characters
 carLocation			= Location does not exist!
+calculateCarWeight	= Calculate car weight based on NMRA recommendations for scale and car length
+carWeightOz			= Enter car's weight in oz
+carWeightTons		= Enter car's weight in tons
+buildDate			= Enter the year that the car was built, use 4 digits 
 findCar				= Find car by road number
 
 MenuItemImport 		= Import from file
