add min/max support

--- a/jmri/jmrix/rps/aligntable/AlignTableBundle.properties
+++ b/jmri/jmrix/rps/aligntable/AlignTableBundle.properties
@@ -1,6 +1,6 @@
 # AlignTableBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrix.rps.aligntable package
 
@@ -10,7 +10,10 @@ TitleColNum     = Receiver
 TitleColX       = X
 TitleColY       = Y
 TitleColZ       = Z
+TitleColLast    = Last Time
 TitleColActive  = Active?
+TitleColMin     = Min Time
+TitleColMax     = Max Time
 
 LabelNumCol     = Number of Receivers:
 LabelVSound     = V Sound:
