Add grade to routes, HP to trains, and nce consist sync to engines

--- a/jmri/jmrit/operations/engines/JmritOperationsEnginesBundle.properties
+++ b/jmri/jmrit/operations/engines/JmritOperationsEnginesBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -37,6 +37,7 @@ Auto				= Auto
 Caboose				= Caboose
 Fred				= FRED
 Hazardous			= Hazardous
+Hp					= Horsepower
 BuildDate			= Build date
 Calculate			= Calculate
 Comment				= Comment
@@ -59,6 +60,8 @@ MenuItemImportRoster	= Import from JMRI roster
 MenuItemDelete 		= Delete all engines
 MenuItemPrint		= Print
 MenuItemPreview		= Preview
+
+MenuItemNceSync		= Synchronize with NCE Consists 
 
 
 
