--- a/jmri/jmrit/operations/routes/JmritOperationsRoutesBundle.properties
+++ b/jmri/jmrit/operations/routes/JmritOperationsRoutesBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -8,7 +8,7 @@ TitleRoutesTable   	= Routes
 TitleCarAttributeEdit = Edit Route
 TitleCarAttributeAdd = Add Route
 
-
+Grade				= Grade
 Length				= Length
 Len					= Len
 
