switch to relative URL in redirect

--- a/jmri/web/servlet/frameimage/JmriJFrameServlet.properties
+++ b/jmri/web/servlet/frameimage/JmriJFrameServlet.properties
@@ -26,7 +26,7 @@ StandardFront = \
       <TITLE>{1}</TITLE>\n\
         <meta http-equiv="Cache-Control" content="no-cache"/>\n\
         <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE"/>\n\
-        <meta http-equiv="refresh" content="{2};url=http://{0}:12080/panel/{1}.html"> <!-- seconds -->\n\
+        <meta http-equiv="refresh" content="{2};url=/panel/{1}.html"> <!-- seconds -->\n\
     </HEAD>\n\
     <BODY>\n\
         <A HREF="http://{0}:12080/panel/{1}.html">\n\
