add 16/24 bit labels

--- a/jmri/jmrix/loconet/downloader/Loader.properties
+++ b/jmri/jmrix/loconet/downloader/Loader.properties
@@ -1,6 +1,6 @@
 # Loader.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 # Copyright 2005 Bob Jacobsen
 #
 #
@@ -17,7 +17,7 @@ ButtonVerify = Verify
 ButtonAbort = Abort
 
 LabelInpFile = Input file:
-
+LabelBitMode = File format: 
 LabelBootload = Bootloader Version Number:
 
 LabelMfg = Manufacturer Number:
@@ -49,6 +49,9 @@ TipAbortDisabled = Button disabled until a download or verify operation
 TipAbortEnabled = Click here to abort a download or verify operation
 
 TipDisabledDownload = Button disabled during download
+
+Button16bit = 16 bit
+Button24bit = 24 bit
 
 ButtonCheckHardwareNo       = Don't check hardware version
 ButtonCheckHardwareExact    = Require hardware version exact match
