fix localhost constraint

--- a/jmri/web/servlet/frameimage/JmriJFrameServlet.properties
+++ b/jmri/web/servlet/frameimage/JmriJFrameServlet.properties
@@ -29,8 +29,8 @@ StandardFront = \
         <meta http-equiv="refresh" content="{2};url=/panel/{1}.html"> <!-- seconds -->\n\
     </HEAD>\n\
     <BODY>\n\
-        <A HREF="http://{0}:12080/panel/{1}.html">\n\
-        <IMG SRC="http://{0}:12080/panel/{1}.png" BORDER=0 ISMAP>\n\
+        <A HREF="/panel/{1}.html">\n\
+        <IMG SRC="/panel/{1}.png" BORDER=0 ISMAP>\n\
         </A>\n
 
 StandardBack = </BODY>\n</HTML>\n
