Show train weight in manifests.  Improve auto engine in builds.

--- a/jmri/jmrit/operations/trains/JmritOperationsTrainsBundle.properties
+++ b/jmri/jmrit/operations/trains/JmritOperationsTrainsBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -94,6 +94,7 @@ ScheduledWorkIn		= Scheduled work in
 TrainDeparts 		= Train departs 
 boundWith			= bound with
 feet				= feet
+tons				= tons
 DropEngineTo 		= Drop engine(s) to
 TrainTerminatesIn	= Train terminates in
 Pickup				= Pickup
