new programmer for editing roster entry w/o programmer

--- a/jmri/jmrit/roster/JmritRosterBundle.properties
+++ b/jmri/jmrit/roster/JmritRosterBundle.properties
@@ -1,10 +1,11 @@
 # JmritRosterBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Default properties for the jmri.jmrit.roster package
 
 MenuItemCreate  = Create Entry ...
+MenuItemEdit    = Edit Entry ...
 MenuItemImport  = Import Entry ...
 MenuItemExport  = Export Entry ...
 MenuItemCopy    = Copy Entry ...
