--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -109,6 +109,9 @@ FrameServiceProgrammerTitle = Program {0} in Service Mode (Programming Track)
 
 FrameNewEntrySetup = New Roster Entry Setup
 FrameNewEntryTitle = Create New Roster Entry
+
+FrameEditEntrySetup = Edit Roster Entry Setup
+FrameEditEntryTitle = Edit Roster Entry
 
 PromptCloseWindowNotWrittenDecoder = Some changes have not been written to the decoder. They will be lost. Close window?
 PromptCloseWindowNotWrittenConfig = Some changes have not been written to a configuration file. Close window?
