Add Sections and Transits

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.28 $
+# Revision $Revision: 1.29 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -31,6 +31,8 @@ jmri.jmrit.beantable.RouteTableAction =             Open Route Table
 jmri.jmrit.beantable.LightTableAction =				Open Light Table
 jmri.jmrit.beantable.BlockTableAction =				Open Block Table
 jmri.jmrit.beantable.LogixTableAction =				Open Logix Table
+jmri.jmrit.beantable.SectionTableAction =			Open Section Table
+jmri.jmrit.beantable.TransitTableAction =			Open Transit Table
 jmri.jmrit.blockboss.BlockBossAction =              Open Signal Logic Panel
 
 jmri.jmrit.consisttool.ConsistToolAction =          Open Consisting Tool
