--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.31 $
+# Revision $Revision: 1.32 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -23,6 +23,7 @@ TitleSignalTable  = Signal Table
 TitleLightTable = Light Table
 TitleLogixTable = Logix Table
 TitleTransitTable = Transit Table
+TitleSectionTable = Section Table
 TitleReporterTable = Reporter Table
 TitleMemoryTable = Memory Table
 
@@ -45,6 +46,7 @@ TitleAddReporter = Add New Reporter
 TitleAddMemory  = Add New Memory
 TitleAddLight   = Add/Edit Light
 TitleAddBlock   = Add/Edit Block
+TitleAddSection = Add/Edit Section
 TitleAddTransit = Add/Edit Transit
 
 ColumnHeadEnabled = Enabled
