--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.21 $
+# Revision $Revision: 1.22 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -22,6 +22,8 @@ MenuItemSimpleSignal = Simple Signal Logic
 MenuItemRouteTable = Routes
 MenuItemLogixTable = Logix
 MenuItemBlockTable = Blocks
+MenuItemSectionTable = Sections
+MenuItemTransitTable = Transits
 MenuItemSensorGroup = Sensor Groups...
 
 MenuThrottles = Throttles
