unix line ends.  Add help links

--- a/jmri/web/miniserver/Html.properties
+++ b/jmri/web/miniserver/Html.properties
@@ -1,1 +1,64 @@
-## Html.properties## Contains HTML strings of some interest.# # These contain internal newlines, but should not# have newlines at the end unless an extra one is needed# StandardHeader = HTTP/1.0 200 OK\r\n\    Server: EchoServer\r\n\    Content-Type: text/html\r\nStandardDocType = <!DOCTYPE HTML PUBLIC \    "-//W3C//DTD HTML 4.0 Transitional//EN\">EchoFront = \    <HTML>\n\    <HEAD>\n\      <TITLE>Request Returned</TITLE>\n\    </HEAD>\n\    \n\    <BODY BGCOLOR=\"#FDF5E6\">\n\    <H1 ALIGN=\"CENTER\">Request Returned</H1>\n\    Here is the request line and request headers sent by your browser:\n\    <PRE>EchoBack = </PRE>\n</BODY>\n</HTML>\n# index.html is made from IndexIndex = \    <HTML>\n\    <HEAD>\n\      <TITLE>JMRI Application</TITLE>\n\    </HEAD>\n\    \n\    <BODY BGCOLOR=\"#FDF5E6\">\n\    <H1 ALIGN=\"CENTER\">JMRI Application</H1>\n\    <img src="/dist/resources/logo.gif" align="right"/>\n\    This is the front page for JMRI application web access.\n\    <p>\n\    If you have the corresponding windows open in your\n\    JMRI application, the following links will work:\n\    <ul>\n\    <li><A HREF="/panel/Power%20Control.html">/panel/Power%20Control.html</a> (Power Control)\n\    <li><A HREF="/panel/Turnout%20Control.html">/panel/Turnout%20Control.html</a> (Turnout Control)\n\    <li><A HREF="/panel/Turnout%20Table.html">/panel/Turnout%20Table.html</a> (Turnout Table)\n\    </ul>\n\    You can also access files:\n\    <ul>\n\    <li><a href="/prefs/index.html">/prefs/index.html<a/> (This page)\n\    <li><a href="/dist/resources/logo.gif">/dist/resources/logo.gif</a> (An icon)\n\    </ul>\n\    For more information, see the JMRI help page\n\    <a href="/dist/help/en/html/web/index.shtml">on your computer</a>\n\    or on the\n\    <a href="http://jmri.sf.net/help/en/html/web/index.shtml">on the web</a>.\n\    </BODY>\n</HTML>    
+#
+# Html.properties
+#
+# Contains HTML strings of some interest.
+# 
+# These contain internal newlines, but should not
+# have newlines at the end unless an extra one is needed
+# 
+
+StandardHeader = HTTP/1.0 200 OK\r\n\
+    Server: EchoServer\r\n\
+    Content-Type: text/html\r\n
+
+StandardDocType = <!DOCTYPE HTML PUBLIC \
+    "-//W3C//DTD HTML 4.0 Transitional//EN\">
+
+EchoFront = \
+    <HTML>\n\
+    <HEAD>\n\
+      <TITLE>Request Returned</TITLE>\n\
+    </HEAD>\n\
+    \n\
+    <BODY BGCOLOR=\"#FDF5E6\">\n\
+    <H1 ALIGN=\"CENTER\">Request Returned</H1>\n\
+    Here is the request line and request headers sent by your browser:\n\
+    <PRE>
+
+EchoBack = </PRE>\n</BODY>\n</HTML>\n
+
+# index.html is made from Index
+Index = \
+    <HTML>\n\
+    <HEAD>\n\
+      <TITLE>JMRI Application</TITLE>\n\
+    </HEAD>\n\
+    \n\
+    <BODY BGCOLOR=\"#FDF5E6\">\n\
+    <H1 ALIGN=\"CENTER\">JMRI Application</H1>\n\
+    <img src="/dist/resources/logo.gif" align="right"/>\n\
+    This is the front page for JMRI application web access.\n\
+    <p>\n\
+    If you have the corresponding windows open in your\n\
+    JMRI application, the following links will work:\n\
+    <ul>\n\
+    <li><A HREF="/panel/Power%20Control.html">/panel/Power%20Control.html</a> (Power Control)\n\
+    <li><A HREF="/panel/Turnout%20Control.html">/panel/Turnout%20Control.html</a> (Turnout Control)\n\
+    <li><A HREF="/panel/Turnout%20Table.html">/panel/Turnout%20Table.html</a> (Turnout Table)\n\
+    </ul>\n\
+    You can also access files:\n\
+    <ul>\n\
+    <li><a href="/prefs/index.html">/prefs/index.html<a/> (This page)\n\
+    <li><a href="/dist/resources/logo.gif">/dist/resources/logo.gif</a> (An icon)\n\
+    </ul>\n\
+    For more information, see the JMRI help page\n\
+    <a href="/dist/help/en/html/web/index.shtml">on your computer</a>\n\
+    or on the\n\
+    <a href="http://jmri.sf.net/help/en/html/web/index.shtml">on the web</a>.\n\
+    <p>\n\
+    JMRI Help\n\
+    <a href="/dist/help/en/webTOC.shtml">table of contents</a>\n\
+    and\n\
+    <a href="/dist/help/en/webindex.shtml">index</a>.\n\    
+    </BODY>\n</HTML>
+    
