Add ability to preview or print locations

--- a/jmri/jmrit/operations/locations/JmritOperationsLocationsBundle.properties
+++ b/jmri/jmrit/operations/locations/JmritOperationsLocationsBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -8,6 +8,8 @@ TitleLocationsTable   	= Locations
 TitleCarAttributeEdit = Edit Location
 TitleCarAttributeAdd = Add Location
 
+MenuItemPrint = Print
+MenuItemPreview = Preview
 
 Length				= Length
 Len					= Len
@@ -25,6 +27,7 @@ Name				= Name
 Used				= Used
 Reserved			= Reserved
 
+Location			= Location
 Cars				= Cars
 Pickup				= Pickups
 Drop				= Drops
