--- a/xml/XSLT/build.xml
+++ b/xml/XSLT/build.xml
@@ -1,6 +1,6 @@
 <!-- an ANT build.xml file for JMRI XSLT -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2005 -->
-<!-- Revision $Revision: 1.17 $ -->
+<!-- Revision $Revision: 1.18 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -94,13 +94,13 @@
       		<include name="CSVindex.html"/>
     	</fileset>
   	</copy> 
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		style="reservedCSV.xsl"
     		in="pages/decoderIndex.xml"
     		out="pages/reservedCVs.csv"
     	>
-	</style>
+	</xslt>
   </target>
   
   <target name="csv" depends="init, copyDTD, copyXML" 
@@ -110,20 +110,20 @@
       		<include name="CSVindex.html"/>
     	</fileset>
   	</copy> 
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		style="SizeAsCSV.xsl"
     		in="pages/decoderIndex.xml"
     		out="pages/decodersizes.csv"
     	>
-	</style>
-    <style  basedir="${target}"
+	</xslt>
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		style="PowerAsCSV.xsl"
     		in="pages/decoderIndex.xml"
     		out="pages/decoderpower.csv"
     	>
-	</style>
+	</xslt>
   <!-- the following no longer works because it runs out of memeory making the page -->
   <!-- which is supposed to contain every CV for every decoder.  Maybe switch to -->
   <!-- a more column oriented form, showing who uses each CV on one page? -->
@@ -138,18 +138,18 @@
   
   <target name="index" depends="init, copyDTD, copyXML" 
   			description="create a decoder index page">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		extension=".html"
     		style="DecoderModelIndex.xsl"
     		includes="decoderIndex.xml"
     	>
-	</style>
+	</xslt>
   </target>
   
   <target name="mfgs" depends="init, copyDTD, copyXML" 
   			description="create a manufacturer index page">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		extension=".html"
     		style="DecoderMfgIndex.xsl"
@@ -157,7 +157,7 @@
     		in="pages/decoderIndex.xml"
     		out="pages/mfgIndex.html"
     	>
-	</style>
+	</xslt>
   </target>
   
   <!-- the following no longer works because it runs out of memeory making the page -->
@@ -166,71 +166,71 @@
   <target name="cvsummary" depends="init, copyDTD, copyXML" 
   			description="create HTML page listing CVs available on all decoders">
     <echo message="setenv ANT_OPTS -Xmx1000M"/>
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		style="CVsummary.xsl"
     		in="pages/decoderIndex.xml"
     		out="pages/CVSummary.html"
     	>
-	</style>
+	</xslt>
   </target>
  <target name="selection" depends="init, copyDTD, copyXML" 
   			description="create HTML decoder selection guide listing various properties">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		style="SelectionGuide.xsl"
     		in="pages/decoderIndex.xml"
     		out="pages/SelectionGuide.html"
     	>
-	</style>
+	</xslt>
   </target>
   
   <target name="models" depends="init, copyDTD, copyXML" 
   			description="tranform definitions into web pages">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		extension=".xml.html"
     		style="DecoderModelList.xsl"
     		includes="*.xml"
     		excludes="decoderIndex.xml, names.html"
     	>
-	</style>
+	</xslt>
   </target>
   
   <target name="id" depends="init, copyDTD, copyXML" 
   			description="create a page on decoder selection">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		extension=".xml.html"
     		style="DecoderID.xsl"
     		in="pages/decoderIndex.xml"
     		out="pages/DecoderId.html"
     	>
-	</style>
+	</xslt>
   </target>
   
   <target name="properties" depends="init, copyDTD, copyXML" 
   			description="tranform definitions into properties files">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${propertiesdir}"
     		extension=".properties"
     		style="PropertiesFiles.xsl"
     		includes="*.xml"
     		excludes="decoderIndex.xml, names.html, interestingCVs.xml"
     	>
-	</style>
+	</xslt>
   </target>
   
   <target name="testweb" depends="init, copyDTD, copyXML" 
   			description="test a single web transform">
-    <style  basedir="${target}"
+    <xslt  basedir="${target}"
     		destdir="${target}"
     		extension=".html"
     		style="decoder.xsl"
     		in="pages/TCS_A1.xml"
     		out="pages/testweb.html"
     	>
-	</style>
+	</xslt>
   </target>
   
 
@@ -238,15 +238,17 @@
   		description="run the whole sequence of processing" />
   		
   <target name="upload" description="Upload existing results to web site" >
-    <exec executable="scp">
-      <arg value="-r"/>
+    <exec executable="rsync">
+      <arg value="-avz"/>
+      <arg value="--delete"/>
       <arg value="pages"/>
-      <arg value="jacobsen@jmri.sf.net:htdocs/xml/XSLT/"/>
+      <arg value="jacobsen,jmri@web.sourceforge.net:htdocs/xml/XSLT/"/>
     </exec>
-    <exec executable="scp">
-      <arg value="-r"/>
+    <exec executable="rsync">
+      <arg value="-avz"/>
+      <arg value="--delete"/>
       <arg value="properties"/>
-      <arg value="jacobsen@jmri.sf.net:htdocs/xml/XSLT/"/>
+      <arg value="jacobsen,jmri@web.sourceforge.net:htdocs/xml/XSLT/"/>
     </exec>
   </target>
 
