Misc. minor updates

--- a/jmri/jmrit/beantable/SectionTransitTableBundle.properties
+++ b/jmri/jmrit/beantable/SectionTransitTableBundle.properties
@@ -1,6 +1,6 @@
 # SectionTransitTableBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.beantable.SectionTableAction and 
 #     jmri.jmrit.beantable.TransitTableAction GUI elements not contained in 
@@ -40,6 +40,7 @@ TransitManual = MANUAL
 TransitDispatched = DISPATCHED
 TransitStartBlock = Start Block
 TransitEndBlock = End Block
+ButtonDuplicate = Duplicate
 TransitMode = Mode
 SequenceColName = Order
 SectionName = Section
