Add feature to append car comments to train manifests

--- a/jmri/jmrit/operations/setup/JmritOperationsSetupBundle.properties
+++ b/jmri/jmrit/operations/setup/JmritOperationsSetupBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -58,6 +58,7 @@ North				= North
 South				= South
 
 PrinterFont			= Manifest Printer Font
+CarComment			= Append Car Comment to Manifest
 SansSerif			= Sans Serif
 Monospaced			= Monospaced
 
