Additional selection to which trains or routes can service an interchange

--- a/jmri/jmrit/operations/locations/JmritOperationsLocationsBundle.properties
+++ b/jmri/jmrit/operations/locations/JmritOperationsLocationsBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -49,6 +49,8 @@ TypesSiding			= Select car types serviced by this siding
 RoadsSiding			= Select car roads serviced by this siding
 TypesStaging		= Select car types for this staging
 RoadsStaging		= Select car roads for this staging
+TrainsOrRoutesDrops	= Select trains or routes for car drops
+TrainsOrRoutesPickups	= Select trains or routes for car pickups
 Ops					= Operations at this location:
 Clear				= Clear all
 Select				= Select all
