--- a/jmri/jmrit/roster/JmritRosterBundle.properties
+++ b/jmri/jmrit/roster/JmritRosterBundle.properties
@@ -1,6 +1,6 @@
 # JmritRosterBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Default properties for the jmri.jmrit.roster package
 
@@ -36,4 +36,20 @@ ToolTipFilename = This is filled in automatically by the program
 
 ErrorDuplicateID = This ID is a duplicate, please change it
 
+
+LabelMoveLocation = Roster info location:
+LabelDefaultOwner = Default owner name: 
+
+ButtonSetDots = Set ...
+ButtonReset = Reset
+
+DialogTitleMove = Find desired roster.xml file
+
+DialogMsgMoveWarning = To use this option, you must already have alternate roster information (a\n\
+"roster.xml" file and a "roster" directory) available somewhere on your\n\
+computer other than the standard location. To use that alternate roster\n\
+information, click "OK" here, then on the next panel go to the folder\n\
+holding your alternate roster.xml file, select the file, and then click "Open".
+
+DialogMsgMoveQuestion = Are you sure you want to continue?
 
