--- a/jmri/jmrit/operations/trains/JmritOperationsTrainsBundle.properties
+++ b/jmri/jmrit/operations/trains/JmritOperationsTrainsBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -52,7 +52,7 @@ Model 				= Model
 SelectRoute			= Select Route
 CarMoves			= Train will work {0} cars  
 Stops				= This train services the following locations
-TypesTrain			= Select car types serviced by this train
+TypesTrain			= Select rolling stock serviced by this train
 RoadsTrain			= Select car roads serviced by this train
 
 Auto				= Auto 
