sub menu for New Panel

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.24 $
+# Revision $Revision: 1.25 $
 #
 # Default properties for the jmrit.display package
 
@@ -12,23 +12,23 @@ MenuEdit      = Edit
 MenuFile      = File
 MenuMarker    = Marker		
 
-MenuItemNew   = New panel...
-MenuItemLoad  = Load panels...
-MenuItemStore = Store panels...
+MenuItemNew   = New Panel...
+MenuItemLoad  = Load Panels...
+MenuItemStore = Store Panels...
 MenuShowPanel = Show Panel
-OpenEditor = Open editor
-DeletePanel = Delete this panel...
-AddLoco     = Add loco
-AddLocoRoster     = Add loco from roster
+OpenEditor = Open Editor
+DeletePanel = Delete This Panel...
+AddLoco     = Add Loco
+AddLocoRoster     = Add Loco from roster
 RemoveMarkers	= Remove markers
 LocoFromRoster = Loco Marker from Roster
-SelectLoco     = Select loco
+SelectLoco     = Select Loco
 EnterLocoMarker = Enter Loco Marker
 EnterLocoID = Enter Loco ID (6 characters max)
 LocoID         = Loco ID
 OK             = OK
 
-MenuItemScript = Run script...
+MenuItemScript = Run Script...
 
 MenuItemMonitor = Thread Monitor
 MenuItemScriptLog = Script Output
